deployment through Ingress/sa-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment                                          
metadata:
  name: sa-frontend
  labels:
    app: sa-frontend
spec:
  selector:
    matchLabels:
      app: sa-frontend
  replicas: 2                                            
  minReadySeconds: 15
  strategy:
    type: RollingUpdate                               
    rollingUpdate: 
      maxUnavailable: 1                                  
      maxSurge: 1                                        
  template:
    metadata:
      labels:
        app: sa-frontend                                 
    spec:
      containers:
        - image: akdokrhub/sa-frontt
          imagePullPolicy: Always                        
          name: sa-frontend
          ports:
            - containerPort: 80
