deployment through Ingress/sa-web-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sa-web-app
  labels:
    app: sa-web-app
spec:
  selector:
    matchLabels:
      app: sa-web-app
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: sa-web-app
    spec:
      containers:
      - image: akdokrhub/webapp
        imagePullPolicy: Always
        name: sa-web-app
        ports:
          - containerPort: 8080
