deployment through Ingress/ingress-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-front
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: aditya-front.ldc.squareops.in
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: sa-frontend
                port:
                  number: 80
